--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,11 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    
+    // UI Components
+    implementation 'com.airbnb.android:lottie:6.1.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
